<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_baseline_shopping_bag_24"
            android:title="@string/my_orders"/>

        <item android:title="">
                <menu>
                        <item
                            android:id="@+id/nav_settings"
                            android:icon="@drawable/ic_baseline_settings_24"
                            android:title="@string/settings"/>
                        <item
                            android:id="@+id/nav_login"
                            android:icon="@drawable/ic_baseline_login_24"
                            android:title="@string/logout"/>
                </menu>

        </item>
        <item android:title="Admin">
                <menu>
                        <item  android:id="@+id/nav_admin"
                            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
                            android:title="Admin Area"/>
                </menu>
        </item>



</menu>