<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projectapp.ui.fragments.OrdersFragment"
        android:label="@string/title_left_dashboard"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.projectapp.ui.fragments.ProductsFragment"
        android:label="@string/title_center_dashboard"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.projectapp.ui.fragments.NotificationsFragment"
        android:label="@string/title_right_dashboard"
        tools:layout="@layout/fragment_notifications" />
</navigation>